tried to fix the views options from overlapping - but still

--- a/src/Components/Codefixer/MainView.css
+++ b/src/Components/Codefixer/MainView.css
@@ -1,9 +1,10 @@
 .main-container {
-  padding-top: 3%;
+  padding-top: 11%;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  z-index: 1;
 }
 
 .codefixer-area {
